[package]
version = "0.1.0"
name = "secp256k1-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "1.1.0"
# fibonacci-lib = { path = "../lib" }
k256 = { version = "0.13", default-features = false, features = ["serde", "ecdsa"] }
serde = "1.0"
rand_core = "0.6.4"

[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }