[package]
version = "0.1.0"
name = "secp256k1-script"
edition = "2021"
default-run = "secp256k1"

[[bin]]
name = "secp256k1"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "1.1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
rand_core = "0.6.4"
# alloy-sol-types = { workspace = true }
k256 = { version = "0.13", default-features = false, features = ["serde", "ecdsa"] }
alloy-primitives = { version = "0.7", features = ["k256"] }

[build-dependencies]
sp1-helper = "1.1.0"
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }

