[package]
version = "0.1.0"
name = "sha512half-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "1.1.0"
# fibonacci-lib = { path = "../lib" }
sha2 = "0.10.8"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
