[package]
version = "0.1.0"
name = "sha512half-script"
edition = "2021"
default-run = "sha512half"

[[bin]]
name = "sha512half"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "1.1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
sha2 = "0.10.8"
hex-literal = "0.4.1"
# alloy-sol-types = { workspace = true }
# fibonacci-lib = { path = "../lib" }

[build-dependencies]
sp1-helper = "1.1.0"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
